# convergence-trials

./: .clang-format  .clang-tidy  .env.example  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GUIDELINES.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  package-lock.json  package.json
cmake/: CopyCompileCommands.cmake
scripts/: run_game.ps1
src/: main.cpp  mockup.ts
src/client/: ArchipelagoClient.ts  types.ts
src/game/: GameRuntime.ts
src/shared/: items.ts  locations.ts  logger.ts  regions.ts
